--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:unit": "jest \"test/unitarias/.*\\.spec\\.ts\"",
-    "test:e2e": "jest \"test/e2e/.*\\.e2e-spec\\.ts\""
+    "test:e2e": "jest \"test/e2e/.*\\.e2e-spec\\.ts\"",
+    "sonar": "node sonar-project.js"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -59,6 +60,7 @@
     "eslint-plugin-import": "^2.20.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
+    "sonarqube-scanner": "^2.8.0",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
     "ts-loader": "^6.2.1",
