--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "jest": "^25.1.0",
+    "jest-sonar-reporter": "^2.0.0",
     "prettier": "^1.19.1",
     "sonarqube-scanner": "^2.8.0",
     "supertest": "^4.0.2",
